--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,7 @@ install:
   - tar xJf autoconf-archive-2017.09.28.tar.xz
   - cp autoconf-archive-2017.09.28/m4/ax_code_coverage.m4 m4/
   - cp autoconf-archive-2017.09.28/m4/ax_prog_doxygen.m4 m4/
+  - cp autoconf-archive-2017.09.28/m4/ax_is_release.m4 m4/
 # TPM2-TSS
   - git clone --depth=1 -b 2.1.0 https://github.com/tpm2-software/tpm2-tss.git
   - pushd tpm2-tss
