--- a/configure.ac
+++ b/configure.ac
@@ -64,6 +64,7 @@ AS_IF([test "x$enable_defaultflags" = "xyes"],
       AX_ADD_COMPILER_FLAG([-fstack-protector-all])
       AX_ADD_COMPILER_FLAG([-fpic])
       AX_ADD_COMPILER_FLAG([-fPIC])
+      AX_ADD_COMPILER_FLAG([-O2])
       AX_ADD_FORTIFY_SOURCE
 
       # work around GCC bug #53119
