--- a/Makefile.am
+++ b/Makefile.am
@@ -77,16 +77,16 @@ pkgconfig_DATA = dist/tpm2-totp.pc
 ### Executable ###
 bin_PROGRAMS += tpm2-totp
 
-tpm2_totp_SOURCES = src/tpm2-totp.c src/tpm2-totp-tcti.c
-tpm2_totp_CFLAGS = $(AM_CFLAGS) $(QRENCODE_CFLAGS)
-tpm2_totp_LDADD = $(AM_LDADD) $(QRENCODE_LIBS) -ldl libtpm2-totp.la
+tpm2_totp_SOURCES = src/tpm2-totp.c
+tpm2_totp_CFLAGS = $(AM_CFLAGS) $(TSS2_TCTILDR_CFLAGS) $(QRENCODE_CFLAGS)
+tpm2_totp_LDADD = $(AM_LDADD) $(TSS2_TCTILDR_LIBS) $(QRENCODE_LIBS) -ldl libtpm2-totp.la
 tpm2_totp_LDFLAGS = $(AM_LDFLAGS)
 
 if HAVE_PLYMOUTH
 libexec_PROGRAMS += plymouth-tpm2-totp
-plymouth_tpm2_totp_SOURCES = src/plymouth-tpm2-totp.c src/tpm2-totp-tcti.c
-plymouth_tpm2_totp_CFLAGS = $(AM_CFLAGS) $(PLY_BOOT_CLIENT_CFLAGS)
-plymouth_tpm2_totp_LDADD = $(AM_LDADD) $(PLY_BOOT_CLIENT_LIBS) -ldl libtpm2-totp.la
+plymouth_tpm2_totp_SOURCES = src/plymouth-tpm2-totp.c
+plymouth_tpm2_totp_CFLAGS = $(AM_CFLAGS) $(TSS2_TCTILDR_CFLAGS) $(PLY_BOOT_CLIENT_CFLAGS)
+plymouth_tpm2_totp_LDADD = $(AM_LDADD) $(TSS2_TCTILDR_LIBS) $(PLY_BOOT_CLIENT_LIBS) -ldl libtpm2-totp.la
 plymouth_tpm2_totp_LDFLAGS = $(AM_LDFLAGS)
 endif # HAVE_PLYMOUTH
 
@@ -116,9 +116,9 @@ EXTRA_DIST += $(SH_LOG_COMPILER)
 if INTEGRATION
 check_PROGRAMS += libtpm2-totp
 
-libtpm2_totp_SOURCES = test/libtpm2-totp.c src/tpm2-totp-tcti.c src/tpm2-totp-tcti.h
-libtpm2_totp_CFLAGS = $(AM_CFLAGS) $(OATH_CFLAGS)
-libtpm2_totp_LDADD = $(AM_LDADD) $(OATH_LIBS) -ldl libtpm2-totp.la
+libtpm2_totp_SOURCES = test/libtpm2-totp.c
+libtpm2_totp_CFLAGS = $(AM_CFLAGS) $(TSS2_TCTILDR_CFLAGS) $(OATH_CFLAGS)
+libtpm2_totp_LDADD = $(AM_LDADD)  $(TSS2_TCTILDR_LIBS) $(OATH_LIBS) -ldl libtpm2-totp.la
 libtpm2_totp_LDFLAGS = $(AM_LDFLAGS) $(OATH_LDFLAGS)
 endif #INTEGRATION
 
