--- a/.travis.yml
+++ b/.travis.yml
@@ -53,11 +53,14 @@ install:
   - cp autoconf-archive-2017.09.28/m4/ax_is_release.m4 m4/
   - cp autoconf-archive-2017.09.28/m4/ax_add_fortify_source.m4 m4/
 # TPM2-TSS
-  - git clone --depth=1 -b 2.1.0 https://github.com/tpm2-software/tpm2-tss.git
+  - git clone --depth=1 -b 2.3.x https://github.com/tpm2-software/tpm2-tss.git
   - pushd tpm2-tss
   - cp ../autoconf-archive-2017.09.28/m4/ax_code_coverage.m4 m4/
+  - cp ../autoconf-archive-2017.09.28/m4/ax_prog_doxygen.m4 m4/
+  - cp ../autoconf-archive-2017.09.28/m4/ax_is_release.m4 m4/
+  - cp ../autoconf-archive-2017.09.28/m4/ax_add_fortify_source.m4 m4/
   - ./bootstrap
-  - ./configure --prefix=${PWD}/../installdir/usr/local
+  - ./configure --prefix=${PWD}/../installdir/usr/local --disable-doxygen-doc
   - make -j$(nproc)
   - make install
   - rm ${PWD}/../installdir/usr/local/lib/*.la
