doc: add README for dracut module
This appears to be common practice for many other dracut modules. The
text is largely taken from the help text of the mkinitcpio hook
dist/initcpio/install/tpm2-totp.in.

Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -182,9 +182,10 @@ endif # HAVE_DOXYGEN
 if HAVE_DRACUT
 if HAVE_PLYMOUTH
 dracut_SCRIPTS = dist/dracut/module-setup.sh dist/dracut/tpm2-totp.sh
+dracut_DATA = dist/dracut/README
 endif # HAVE_PLYMOUTH
 endif # HAVE_DRACUT
-EXTRA_DIST += dist/dracut/tpm2-totp.sh
+EXTRA_DIST += dist/dracut/tpm2-totp.sh dist/dracut/README
 
 if HAVE_INITRAMFSTOOLS
 if HAVE_PLYMOUTH
