build: fix doxygen status display in configure
The variable name was wrong, resulting in an empty display at all times.

Fixes: 51eae368cb22a8de2cbd17387d5881db620b8226
Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/configure.ac
+++ b/configure.ac
@@ -197,7 +197,7 @@ AC_OUTPUT
 
 AC_MSG_RESULT([
 $PACKAGE_NAME $VERSION
-    doxygen:         $DOXYGEN
+    doxygen:         $DX_DOXYGEN
     pandoc:          $PANDOC
     dracut:          $with_dracutmodulesdir
     initramfs-tools: $with_initramfstoolsdir
