dist: fix installation location of show-tpm2-totp for dracut
module-setup.sh copies show-tpm2-totp from helpersdir, so the script
needs to be put there (as it is done for mkinitcpio as well) instead of
dracutdir.

Fixes: 38ca58575fc7b964e60e30457859020df2ba0fe6
Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -178,8 +178,9 @@ endif # HAVE_DOXYGEN
 EXTRA_DIST += dist/show-tpm2-totp
 
 if HAVE_DRACUT
+helpers_SCRIPTS = dist/show-tpm2-totp
 dracut_SCRIPTS = dist/dracut/module-setup.sh dist/dracut/show-tpm2-totp.sh \
-                 dist/dracut/cleanup-tpm2-totp.sh dist/show-tpm2-totp
+                 dist/dracut/cleanup-tpm2-totp.sh
 dracut_DATA = dist/dracut/README
 endif # HAVE_DRACUT
 EXTRA_DIST += dist/dracut/show-tpm2-totp.sh dist/dracut/cleanup-tpm2-totp.sh dist/dracut/README
