tpm2-totp: display more specific messages for common error cases
Collect the response code for common errors (like trying to generate a
secret if one is already stored) and display more specific help. In case
we do not have a custom text, show the human-readable explanation for
the response code using the tss2-rc library.

Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -79,8 +79,8 @@ pkgconfig_DATA = dist/tpm2-totp.pc
 bin_PROGRAMS += tpm2-totp
 
 tpm2_totp_SOURCES = src/tpm2-totp.c
-tpm2_totp_CFLAGS = $(AM_CFLAGS) $(TSS2_TCTILDR_CFLAGS) $(QRENCODE_CFLAGS)
-tpm2_totp_LDADD = $(AM_LDADD) $(TSS2_TCTILDR_LIBS) $(QRENCODE_LIBS) libtpm2-totp.la
+tpm2_totp_CFLAGS = $(AM_CFLAGS) $(TSS2_TCTILDR_CFLAGS) $(TSS2_RC_CFLAGS) $(QRENCODE_CFLAGS)
+tpm2_totp_LDADD = $(AM_LDADD) $(TSS2_TCTILDR_LIBS) $(TSS2_RC_LIBS) $(QRENCODE_LIBS) libtpm2-totp.la
 tpm2_totp_LDFLAGS = $(AM_LDFLAGS)
 
 if HAVE_PLYMOUTH
