--- a/configure.ac
+++ b/configure.ac
@@ -89,6 +89,7 @@ PKG_PROG_PKG_CONFIG([0.25])
 PKG_CHECK_MODULES([TSS2_ESYS],[tss2-esys])
 PKG_CHECK_MODULES([TSS2_MU],[tss2-mu])
 PKG_CHECK_MODULES([TSS2_TCTILDR],[tss2-tctildr])
+PKG_CHECK_MODULES([TSS2_RC],[tss2-rc])
 PKG_CHECK_VAR([TSS2_TCTI_DEVICE_LIBDIR], [tss2-tcti-device], [libdir], ,
               [AC_MSG_ERROR([Required library tss2-tcti-device not found])])
 AC_SUBST([TSS2_TCTI_DEVICE_LIBDIR])
