link libtpm2-totp.c into the two executables directly
Signed-off-by: Trammell hudson <hudson@trmm.net>

--- a/Makefile.am
+++ b/Makefile.am
@@ -65,29 +65,19 @@ endif
 @DX_RULES@
 MOSTLYCLEANFILES += $(DX_CLEANFILES)
 
-### Library ###
-lib_LTLIBRARIES += libtpm2-totp.la
-include_HEADERS += include/tpm2-totp.h
-
-libtpm2_totp_la_SOURCES = src/libtpm2-totp.c
-libtpm2_totp_la_LIBADD = $(AM_LDADD)
-libtpm2_totp_la_LDFLAGS = $(AM_LDFLAGS) '(tpm2_totp)'
-
-pkgconfig_DATA = dist/tpm2-totp.pc
-
 ### Executable ###
 bin_PROGRAMS += tpm2-totp
 
-tpm2_totp_SOURCES = src/tpm2-totp.c
+tpm2_totp_SOURCES = src/tpm2-totp.c src/libtpm2-totp.c
 tpm2_totp_CFLAGS = $(AM_CFLAGS) $(TSS2_TCTILDR_CFLAGS) $(QRENCODE_CFLAGS)
-tpm2_totp_LDADD = $(AM_LDADD) $(TSS2_TCTILDR_LIBS) $(QRENCODE_LIBS) -ldl libtpm2-totp.la
+tpm2_totp_LDADD = $(AM_LDADD) $(TSS2_TCTILDR_LIBS) $(QRENCODE_LIBS)
 tpm2_totp_LDFLAGS = $(AM_LDFLAGS)
 
 if HAVE_PLYMOUTH
 helpers_PROGRAMS += plymouth-tpm2-totp
-plymouth_tpm2_totp_SOURCES = src/plymouth-tpm2-totp.c
+plymouth_tpm2_totp_SOURCES = src/plymouth-tpm2-totp.c src/libtpm2-totp.c
 plymouth_tpm2_totp_CFLAGS = $(AM_CFLAGS) $(TSS2_TCTILDR_CFLAGS) $(PLY_BOOT_CLIENT_CFLAGS)
-plymouth_tpm2_totp_LDADD = $(AM_LDADD) $(TSS2_TCTILDR_LIBS) $(PLY_BOOT_CLIENT_LIBS) -ldl libtpm2-totp.la
+plymouth_tpm2_totp_LDADD = $(AM_LDADD) $(TSS2_TCTILDR_LIBS) $(PLY_BOOT_CLIENT_LIBS)
 plymouth_tpm2_totp_LDFLAGS = $(AM_LDFLAGS)
 endif # HAVE_PLYMOUTH
 
